agrego valores a css

--- a/estilos/index.css
+++ b/estilos/index.css
@@ -217,3 +217,10 @@ h5{
     text-decoration: none;
     text-transform: uppercase;
 }
+
+.carousel-inner{ 
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 500px;
+    }
