--- a/estilos_sas/estilos.scss
+++ b/estilos_sas/estilos.scss
@@ -15,14 +15,11 @@ body {
 }
 
 .nav{
-    height: 95px;
-    width: 100vw;
-    margin: 10px auto;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.nav-item .nav-link{
+.nav-link .navbar-brand{
     background-color:#095c14;
     color: #fff;    
     font-size: 15px;
@@ -30,14 +27,15 @@ body {
     text-decoration: none;
     text-transform: uppercase;
 }
+
 .nav:hover .nav-link{
-    filter: blur(1px);
+    filter: blur(2px);
     background-color:#095c14;
 }
 .nav .nav-link:hover{
-    transform: translateY(-2px) scale(1.05);
-    box-shadow: 0 1px 5px 0px rgba(0, 0, 0, .1);
-    filter:blur();
+    transform: translateY(-3px) scale(1.05);
+    box-shadow: 0 1px 5px 0px rgba(0, 0, 0, .4);
+    filter: none;
 }
 
 .main{
@@ -176,26 +174,16 @@ textarea{
     display: grid;
     justify-content: center;
 }
+
 .precios-contenedor{
     display: flex;
     justify-content: space-around;
     list-style-type: none;
     padding: 10px;
     width: auto;
+    flex-wrap: wrap;
 }
-.precios-container{
-    background-color:#027211;
-    color: #fff;
-    display: grid;
-    justify-content: center;
-}
-.precios-container:hover{
-    filter: blur(1px);
-    background-color:#027211;
-    transform: translateY(-3px) scale(1.05);
-    box-shadow: 0 1px 5px 0px rgba(0, 0, 0, .4);
-    filter: none;
-}
+
 
 /*contacto*/
 h5{
