--- a/estilos_sas/estilos.scss
+++ b/estilos_sas/estilos.scss
@@ -1,3 +1,8 @@
+@import "config.scss";
+@import "variables.scss";
+
+
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -18,14 +23,15 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.nav-link .navbar-brand{
-    background-color:#095c14;
-    color: #fff;    
-    font-size: 15px;
-    padding: 5px 25px;
-    text-decoration: none;
-    text-transform: uppercase;
+		
+	.nav-link .navbar-brand{
+    		background-color:#095c14;
+   		    color: #fff;    
+    		font-size: 15px;
+    		padding: 5px 25px;
+    		text-decoration: none;
+    		text-transform: uppercase;
+        }
 }
 
 .nav:hover .nav-link{
@@ -44,13 +50,6 @@ body {
 .footer{
     grid-area: footer;
 }
-
-.redes-container ul li{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 :root{
     --facebook: #3b5999 ;
     --instagram: #e4405f;
@@ -58,34 +57,35 @@ body {
     --whatsapp: #00bb2d;
 }
 
-.footer, .redes-container{
-    display: flex;
-    height: 200px;
-    align-items: center;
-    justify-content: center;
+.footer{ 
+    
+    .redes-container{
+        display: flex;
+        height: 400px;
+        align-items: center;
+        justify-content: center;
+
+        .ul li{
+            display: inline-block;
+            margin: 0 5px;
+            width: 50px;
+            height: 50px;
+            text-align: center;
+
+            a{
+                display: block;
+                padding: 1px 10px;
+                background-color: #095c14;
+                color: #fff;
+                line-height: 50px; 
+                font-size: 18px;
+                box-shadow: 0 1px 5px 0px rgba(0, 0, 0, .2);
+                transition: .2s;
+             }
+        }       
+    }
 }
-.redes-container{
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-}
-.redes-container ul li{
-    display: inline-block;
-    margin: 0 5px;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-}
-.redes-container ul li a{
-    display: block;
-    padding: 1px 10px;
-    background-color: #095c14;
-    color: #fff;
-    line-height: 50px; 
-    font-size: 18px;
-    box-shadow: 0 1px 5px 0px rgba(0, 0, 0, .2);
-    transition: .2s;
-}
+
 .redes-container ul:hover a{
     filter: blur(2px);
 }
@@ -104,76 +104,6 @@ body {
     background: var(--whatsapp);
 }
 
-form{
-    width: 450px;
-    margin: auto;
-    background: rgba(0, 0, 0, .4);
-    padding: 10px 20px;
-    box-sizing: border-box;
-    margin-top: 20px;
-    border-radius: 7px;
-}
-.contacto{
-    background-color:#333 ;
-    color:white;
-    text-align: center;
-    margin: 0;
-    font-size: 30px;
-    margin-bottom: 20px;
-}
-input, textarea{
-    width: 100%;
-    margin-bottom: 30px;
-    padding: 5px;
-    box-sizing: border-box;
-    font-size: 17px;
-    border: none;
-}
-textarea{
-    min-height: 100px;
-    max-height: 300px;
-    min-width: 300px;
-    max-width: 410px;
-}
-#boton{
-    background: #333;
-    color: #fff;
-    padding: 20px;
-}
-#boton:hover{
-    transform: translateY(-3px) scale(1.05);
-    box-shadow: 0 1px 5px 0px rgba(0, 0, 0, .4);
-    filter:none;
-    cursor: pointer;
-}
-@media (max-width: 480px){
-    form{
-        width: 100%;
-    }
-}
-
-.envio-container{
-    background-color:#fff;
-}
-
-.card-text{
-    align-items: center;
-    column-gap: 10px;
-    grid-template-columns: auto auto;
-    display: flex;
-    margin: auto;
-    padding: auto;
-    width: 85%;
-    row-gap: 10px;
-    justify-content:space-around;
-    align-items: flex-end;   
-}
-.card-text{
-    background-color:#095c14;
-    color: #fff;
-    display: grid;
-    justify-content: center;
-}
 
 .precios-contenedor{
     display: flex;
@@ -182,28 +112,16 @@ textarea{
     padding: 10px;
     width: auto;
     flex-wrap: wrap;
-}
 
-
-/*contacto*/
-h5{
-    background-color:rgb(105, 104, 104);
-    display: block;
-    color: #fff;    
-    font-size: 18px;
-    padding: 7px 13px;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-/*precios*/
-.promo-container{
-    background-color:#095c14;
-    display: block;
-    color: #fff;    
-    font-size: 18px;
-    padding: 7px 13px;
-    text-decoration: none;
-    text-transform: uppercase;
+    .promo-container{
+        background-color:#095c14;
+        display: block;
+        color: #fff;    
+        font-size: 18px;
+        padding: 7px 13px;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
 }
 
 .carousel-inner{ 
