realizo nesting en redes

--- a/estilos_sas/estilos.scss
+++ b/estilos_sas/estilos.scss
@@ -1,7 +1,11 @@
 @import "config.scss";
 @import "variables.scss";
 
+$color-primaro:#095c14;
 
+$tipografia-general: 'Times New Roman', Times, serif;
+
+$fuente-normal:1.2rem;
 
 *{
     box-sizing: border-box;
