--- a/estilos_sas/estilos.scss
+++ b/estilos_sas/estilos.scss
@@ -18,11 +18,12 @@ body {
     min-height: 100%;
     background-color:#fff;
 }
-.main{
-    grid-area: main;       
+.article{
+    .main{
+        grid-area: main;       
+    
+    }
 }
-.footer{ 
-    grid-area: main;    
 
 :root{
     --facebook: #3b5999 ;
@@ -49,13 +50,16 @@ body {
     }
 }
 
-.carousel-inner{ 
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-    height: 500px;
+.carousel_primario{
+           
+        .carousel_secundario{ 
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+        height: 500px;
+            
     }
-
+}
 
 
 .nav{
@@ -84,6 +88,11 @@ body {
     filter: none;
    
 }
+
+
+
+.footer{ 
+    grid-area: main;    
 
     .redes-container{
         display: flex;
