agrego hojas de scss y ademas realizo modificacion agregando mixin y maps

--- a/estilos_sas/_variables.scss
+++ b/estilos_sas/_variables.scss
@@ -1,4 +1,21 @@
-$blanco: white;
-$verde: #095c14;
 
-$html-height:100%;
+$bg-color-green: #095c14;
+$color-fuente: white;
+$altura:100%;
+$tamaño-fuente:18px;
+
+
+
+$redes:( 
+        facebook: #3b5999, 
+        instagram:#e4405f,
+        whatsapp: #00bb2d
+);
+
+
+$estilos:(
+        centro: center,
+        tfuente: 18px,
+        padding: 1px 10px
+);
+
