--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,3 +1,29 @@
+/*precios-contenedor*/
+/*redes*/
+footer {
+  text-align: center;
+  font-size: 18px; }
+
+.facebook {
+  color: #3b5999; }
+
+.instagram {
+  color: #e4405f; }
+
+.whatsapp {
+  color: #00bb2d; }
+
+.precios-contenedor {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: 0; }
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -17,9 +43,8 @@ body {
   grid-area: main; }
 
 :root {
-  --facebook: #3b5999 ;
-  --instagram: #e4405f;
-  --twitter: #55acee;
+  --facebook: #3b5999;
+  --instagram:#e4405f;
   --whatsapp: #00bb2d; }
 
 .nav {
