--- a/estilos_sas/estilos.scss
+++ b/estilos_sas/estilos.scss
@@ -1,8 +1,13 @@
-@import './variables';
-@import './mixins';
-@import './config';
+@import "./fuentesiconos";
+@import "./variables";
+@import "./mixins";
+@import "./header";
+@import "./main";
+@import "./mediaqueris";
+@import "./reset";
+@import "./footer";
 
-$color-primario: #095c14;
+
 
 *{
     box-sizing: border-box;
@@ -26,9 +31,8 @@ body {
     }
 }
 :root{
-    --facebook: #3b5999 ;
-    --instagram: #e4405f;
-    --twitter: #55acee;
+    --facebook: #3b5999;
+    --instagram:#e4405f;
     --whatsapp: #00bb2d;
 }
 
@@ -39,9 +43,7 @@ body {
         &:hover .nav-link{
         transition: 0.20s;
         
-        
      }
-
         .navbar{
                 
 	        .nav-link{
