se agrega info en pag index + nosotros + preg frecuentes, ademas se hace un extend de precios contenedor

--- a/estilos_sas/_main.scss
+++ b/estilos_sas/_main.scss
@@ -18,3 +18,9 @@ footer{
 .precios-contenedor{
     @include flex-wrap-space-around;
 }
+
+.promo-container{
+    @extend .precios-contenedor;
+    
+}
+
