--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -13,7 +13,7 @@ footer {
 .whatsapp {
   color: #00bb2d; }
 
-.precios-contenedor {
+.precios-contenedor, .promo-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around; }
@@ -69,16 +69,15 @@ body {
       text-decoration: none;
       text-transform: uppercase; }
 
-.precios-contenedor {
-  display: flex;
+.precios-contenedor, .promo-container {
   justify-content: space-around;
   list-style-type: none;
-  padding: 10px;
+  padding: 7px 13px;
   width: auto;
   flex-wrap: wrap; }
-  .precios-contenedor .promo-container {
+  .precios-contenedor .promo-container, .promo-container .promo-container {
     background-color: #095c14;
-    display: block;
+    display: flex;
     color: #fff;
     font-size: 18px;
     padding: 7px 13px;
