modifico scss para que ingresen colores en rede

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -5,7 +5,7 @@ footer {
   font-size: 18px; }
 
 .facebook {
-  color: #3b5999; }
+  background-color: #3b5999; }
 
 .instagram {
   color: #e4405f; }
@@ -97,12 +97,6 @@ body {
     height: 400px;
     align-items: center;
     justify-content: center; }
-    .footer .redes-container .redes-container ul li .facebook:hover {
-      background: var(--facebook); }
-    .footer .redes-container .redes-container ul li .instagram:hover {
-      background: var(--instagram); }
-    .footer .redes-container .redes-container ul li .whatsapp:hover {
-      background: var(--whatsapp); }
     .footer .redes-container .ul ul:hover {
       filter: blur(2px);
       transform: translateY(-3px) scale(1.05);
@@ -131,3 +125,12 @@ body {
           transform: translateY(-3px) scale(1.05);
           box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.4);
           filter: none; }
+
+.redes-container ul li .facebook:hover {
+  background: var(--facebook); }
+
+.redes-container ul li .instagram:hover {
+  background: var(--instagram); }
+
+.redes-container ul li .whatsapp:hover {
+  background: var(--whatsapp); }
