--- a/estilos_sas/estilos.scss
+++ b/estilos_sas/estilos.scss
@@ -23,9 +23,13 @@ body {
     font-size: 1.2rem;
     min-height: 100%;
     background-color:#fff;
+    
+   
+    
 }
 .article{
-    .main{
+     padding: 50px;
+         .main{
         grid-area: main;       
     
     }
@@ -36,46 +40,34 @@ body {
     --whatsapp: #00bb2d;
 }
 
-.nav{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-        &:hover .nav-link{
-        transition: 0.20s;
+
+
+.nav{ 
+             
+    .nav-div1{ 
+        background-color: #fff;
         
-     }
-        .navbar{
+         .nav-div2{
+            background-color:#095c14;
+             .navbar-ul{ 
                 
-	        .nav-link{
-                color: #fff;    
-                padding: 5px 25px;
-                transition: 0.20s;
-                &:hover{
-                    transform: translateY(-3px) scale(1.05);
-                    box-shadow: 1 0px 0px 0px rgba(0, 0, 0, .4);
-                    filter: none;
-                }
-                
-                    .navbar-brand{
-                        background-color:#095c14;
-                        color: #fff;    
-                        font-size: 15px;
-                        padding: 5px 25px;
-                        text-decoration:none;
-                        text-transform: uppercase;
+                .nav-item{   
                         
-               }
+                     .navbar-brand{
+                           color: #fff;   
+                                            
+                   }
+                } 
+            }
         }
     }
 }
 
 
 .precios-contenedor{
-    
-    
     justify-content: space-around;
     list-style-type: none;
-    padding: 7px 13px;
+    padding: 70px;
     width: auto;
     flex-wrap: wrap;
 
@@ -84,23 +76,17 @@ body {
         display: flex;
         color: #fff;    
         font-size: 18px;
-        padding: 7px 13px;
+        padding: 1px;
         text-decoration: none;
         text-transform: uppercase;
+       
     }
 }
-
-
-
-.carousel_primario{
-           
-    .carousel_secundario{ 
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-    height: 500px;
-        
-}
+.container-contacto{
+    padding: 50px;
+ }
+.sec-contenedor{
+    padding: 20px;
 }
 
 .footer{ 
@@ -112,14 +98,12 @@ body {
         align-items: center;
         justify-content: center;
 
-      
-       
             .ul{
                 ul:hover{
                     filter: blur(2px);
                     transform: translateY(-3px) scale(1.05);
                     box-shadow: 0 1px 5px 0px rgba(0, 0, 0, .4);
-                    filter: none;
+                    
                 }
                 li{
                     display: inline-block;
@@ -164,3 +148,5 @@ body {
         .redes-container ul li .whatsapp:hover{
             background: var(--whatsapp);
         }
+
+   
