--- a/estilos_sas/estilos.scss
+++ b/estilos_sas/estilos.scss
@@ -19,7 +19,7 @@ html {
     height: 100%;
 }
 body {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.2rem;
     min-height: 100%;
     background-color:#fff;
