--- a/estilos_sas/estilos.scss
+++ b/estilos_sas/estilos.scss
@@ -84,6 +84,15 @@ body {
 }
 .container-contacto{
     padding: 20px;
+                .form-group{ 
+                    padding: 5px;
+                    .form-row{ 
+                        padding: 1px;
+                    .form-control{
+                         padding: 3px;
+            }
+        }
+    }
  }
 .sec-contenedor{
     padding: 20px;
